GNOME Bugzilla – Bug 737540
Freebase: async topic queries use the wrong result gtype
Last modified: 2014-12-23 10:20:28 UTC
I missed to notice this when testing... gdata_freebase_service_get_topic_async() creates an object of type GDATA_TYPE_FREEBASE_RESULT asynchronously, although it should be a GDATA_TYPE_FREEBASE_TOPIC_RESULT. I'm attaching a patch
Created attachment 287300 [details] [review] freebase: Create async topic replies with the correct GType The async version was wrongly using the parent type, so the returned object wasn't a GDataFreebaseTopicResult at all.
Review of attachment 287300 [details] [review]: ++, though the same comment about regression tests applies as from bug #737539.
(In reply to comment #2) > Review of attachment 287300 [details] [review]: > > ++, though the same comment about regression tests applies as from bug #737539. The tests I attached to that bug cover this issue :)
Comment on attachment 287300 [details] [review] freebase: Create async topic replies with the correct GType (In reply to comment #3) > The tests I attached to that bug cover this issue :) Great! Please commit to master.
Attachment 287300 [details] pushed as 0e3915c - freebase: Create async topic replies with the correct GType