freebase: Create async topic replies with the correct GType

The async version was wrongly using the parent type, so the returned object
wasn't a GDataFreebaseTopicResult at all.

https://bugzilla.gnome.org/show_bug.cgi?id=737540